# jcch-dbgen

./: BUGS  CMakeLists.txt  HISTORY  Makefile  PORTING.NOTES  README  bm_utils.c  build.c  config.h  dbgen.dsp  dists.dss  driver.c  dss.h  dss.ri  dsstypes.h  jcch_config.h  jcch_dbgen.c  jcch_dbgen.h  jcch_dss.h  jcch_dsstypes.h  jcch_rnd.h  jcch_shared.h  load_stub.c  makefile.suite  permute.c  print.c  qgen.c  qgen.vcproj  rnd.c  rnd.h  rng64.c  rng64.h  speed_seed.c  text.c  tpcd.h  tpch.vcproj  varsub.c
jcch-dbgen/: CMakeLists.txt  bm_utils.c  build.c  config.h  driver.c  dss.h  dsstypes.h  jcch_dbgen.c  load_stub.c  print.c  rnd.c  rng64.c  speed_seed.c
jcch-dbgen/skew/: phash.c  phash.h
reference/: README.txt
skew/: phash.c
tests/: last_row.sh  load_balance.sh  new55.sh
